--- a/chartjs.html
+++ b/chartjs.html
@@ -7,6 +7,8 @@
                 <link rel="stylesheet" type="text/css" href="style.css">
               </head>
 <body>
+        <h1>World population over time</h1>
+        <h2>Number of people (in millions) living on earth, the last 500 years</h2>
         <canvas id="myChart" width="1600" height="900"></canvas>
         <script src="chartjs.js"></script>     
 </body>
